--- a/sites/staticsites.io/css/site.css
+++ b/sites/staticsites.io/css/site.css
@@ -1,65 +1,88 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i");
-
 body {
     background: #fafafa;
-    color: #666;
+    color: #222;
     padding: 0.5em 1em;
     font-family: Montserrat, sans-serif;
     font-size: 14pt;
     line-height: 1.5em;
 }
-a, a:link, a:active, a:visited, a:hover {
+
+a,
+a:link,
+a:active,
+a:visited,
+a:hover {
     text-decoration: none;
     color: #4499E4;
     border-bottom: solid 1px;
 }
+
 a:hover {
     color: #2B76B8;
 }
-#header, #main {
+
+#header,
+#main {
     margin: 0 auto;
     min-width: 15em;
     max-width: 50em;
 }
+
 #header {
     color: #555;
     border-bottom: solid 1px #bbb;
     padding: 1em 0;
     margin-bottom: 4em;
 }
+
 #footer {
     border-top: solid 1px #bbb;
     margin-top: 3em;
     padding: 0.5em 0;
     font-size: 0.8em;
 }
-h1, h2, h3 {
+
+h1,
+h2,
+h3 {
     color: #333;
 }
+
 h1 {
     margin: 0 0 0.1em 0;
 }
-h2, h3 {
+
+h2,
+h3 {
     margin: 1em 0 0.5em 0;
 }
+
 li {
     margin: 0.4em 0;
 }
+
+p {
+    line-height: 135%;
+}
+
 pre {
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
     overflow: scroll;
     background: #fff;
-    border: solid 3px #ddd;
+    border: solid 1px #bbb;
     padding: 0.5em 0.5em;
 }
+
 code {
-    font-weight: bold;
     border: 0;
-    background: #fff;
+    background: #e9e9e9;
     padding: 0.05em 0.2em;
     margin: 0 0.2em;
 }
-pre > code {
-    font-weight: normal;
+
+pre>code {
+    background: #fff;
     padding: 0;
     margin: 0;
 }
